--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
   <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
+  <canvas 
+  style="position: fixed; top: 0; left: 0;">
+  </canvas>
+
   <main>
-    <canvas style="position: fixed; top: 0; left: 0;"></canvas>
     <div class="container">
-      <h1>Munira Qazi</h1>
-      <h3>Web Developer</h3>
+    <h1>Munira</h1>
+    <h3>Web Developer</h3>
     </div>
+
   </main>
 
   <script src="./src/script.js"></script>
