--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./styles/styles.css">
+  <script src="https://kit.fontawesome.com/523e0b0920.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <canvas 
@@ -13,9 +14,21 @@
   </canvas>
 
   <main>
-    <div class="container">
-    <h1>Munira</h1>
-    <h3>Web Developer</h3>
+    <div class="headerContainer">
+      <div class="navContainer">
+        <nav>
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Projects</li>
+            <li>Skills</li>
+            <li>Contact</li>
+          </ul>
+        </nav>
+      </div>
+    <h1>hi, I'm Munira</h1>
+    <h3>Front-End Web Developer</h3>
+    <i class="fas fa-angle-double-down fa-9x"></i>
     </div>
 
   </main>
